# InhomCorr

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yaml  codecov.yml  documentation.yml  pre-commit.yml  unittest.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/: data_manip.py
src/inhomcorr/: __init__.py  data_manip.py  dummyclass.py  mrdata.py
src/inhomcorr/bias/: torchio_bias.py
src/inhomcorr/bias_creator/: bias_creator_interface.py  torchio_bias.py
src/inhomcorr/bias_estimator/: bias_estimator_interface.py  n4_itk.py  supervised_training_dataset_interface.py  trainer_interface.py
src/inhomcorr/data_loader/: data_loader_interface.py  data_loader_nii.py  dcm2nii.py
src/inhomcorr/data_loading/: create_qmri.py  dcm2nii.py
src/inhomcorr/interfaces/: __init__.py  bias_creator_interface.py  bias_estimator_interface.py  dataset_interface.py  mr_data_interface.py  mr_sig_interface.py  mr_signal_interface.py  trainer_interface.py
src/inhomcorr/methods/: __init__.py  biasfield_estimators.py  n4_biasfield_estimator.py  n4_itk.py  unet.py  unet_estimator.py
src/inhomcorr/mrsig/: __init__.py  flash.py  flash_t1.py  mrsig_interface.py
src/methods/: n4_itk.py
tests/: test_bias.py  test_biasfield_estimators.py  test_create_mr_data.py  test_data_loader.py  test_data_manip.py  test_dcm_to_nii.py  test_dummy_class.py  test_image_data.py  test_integration.py  test_interface.py  test_method_n4.py  test_methods_unet.py  test_mr_sig.py  test_mrdata.py  test_qmri_data.py  testdata.py
tests/TestDicoms_Phantom1Dicom/: 20200814_MADSDLPHANTOM.MR.PTB_CSA.0003.0001.2020.08.14.12.53.57.906250.28349514.IMA
