[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InhomCorr"
version = "0.0.1"
description = "A python project to remove inhomogeneities from MRI images."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["MRI, inhomogeneities, DCE, AI"]
authors = [
  { name="Christoph Kolbitsch", email="christoph.kolbitsch@ptb.de" },
  { name="Patrick Schuenke", email="patrick.schuenke@ptb.de" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
]

[project.urls]
"repository" = "https://github.com/ckolbPTB/InhomCorr"

# MyPy section
[tool.mypy]
warn_return_any = "False"
check_untyped_defs = "True"
warn_no_return = "True"
warn_unreachable = "True"
exclude = ["docs"]

# Black section
[tool.black]
line-length = 79
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

# Isort section
[tool.isort]
profile = "black"
line_length = 79
sections = ["FUTURE", "STDLIB", "FIRSTPARTY" , "THIRDPARTY", "LOCALFOLDER"]
force_single_line = "True"
